kind/manifest.yaml
---
# Source: higress-core/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-controller
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-2.2.4
    app: higress-controller
    higress: higress-controller
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-controller
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: http-solver
      port: 8889
      protocol: TCP
      targetPort: 8889
    - name: grpc
      port: 15051
      protocol: TCP
      targetPort: 15051
    - port: 15010
      name: grpc-xds # plaintext
      protocol: TCP
    - port: 15012
      name: https-dns # mTLS with k8s-signed cert
      protocol: TCP
    - port: 443
      name: https-webhook # validation and injection
      targetPort: 15017
      protocol: TCP
    - port: 15014
      name: http-monitoring # prometheus stats
      protocol: TCP
  selector:
    app: higress-controller
    higress: higress-controller

---
# Source: higress-core/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: higress-gateway
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-2.2.4
    app: higress-gateway
    higress: higress-system-higress-gateway
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-gateway
  annotations:
    {}
spec:
  type: LoadBalancer
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: higress-gateway
    higress: higress-system-higress-gateway

---
# Source: higress-core/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-controller
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-2.2.4
    app: higress-controller
    higress: higress-controller
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-controller
      higress: higress-controller
  template:
    metadata:
      labels:
        app: higress-controller
        higress: higress-controller
    spec:
      serviceAccountName: higress-controller
      securityContext:
        {}
      containers:
        - name: higress-core
          securityContext:
            {}
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/higress:v2.2.3"
          args:
          - "serve"
          - --gatewaySelectorKey=higress
          - --gatewaySelectorValue=higress-system-higress-gateway
          - --gatewayHttpPort=80
          - --gatewayHttpsPort=443
          - --ingressClass=higress
          - --gatewayClass=higress
          - --enableAutomaticHttps=true
          - --automaticHttpsEmail=
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: http-solver
              containerPort: 8889
              protocol: TCP
            - name: grpc
              containerPort: 15051
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8888
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
          volumeMounts:
          - name: log
            mountPath: /var/log
        - name: discovery
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/pilot:v2.2.3"
          args:
          - "discovery"
          - --monitoringAddr=:15014
          - --log_output_level=default:info
          - --domain
          - cluster.local
          - --keepaliveMaxServerConnectionAge
          - "30m"
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 15010
            protocol: TCP
          - containerPort: 15017
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - name: config
            mountPath: /etc/istio/config
          - name: istio-token
            mountPath: /var/run/secrets/tokens
            readOnly: true
          - name: local-certs
            mountPath: /var/run/secrets/istio-dns
          - name: cacerts
            mountPath: /etc/cacerts
            readOnly: true
          - name: istio-kubeconfig
            mountPath: /var/run/secrets/remote
            readOnly: true
      volumes:
      - name: log
        emptyDir: {}
      - name: config
        configMap:
          name: higress-config
      # Technically not needed on this pod - but it helps debugging/testing SDS
      # Should be removed after everything works.
      - emptyDir:
          medium: Memory
        name: local-certs
      - name: istio-token
        projected:
          sources:
            - serviceAccountToken:
                audience: istio-ca
                expirationSeconds: 43200
                path: istio-token
      # Optional: user-generated root
      - name: cacerts
        secret:
          secretName: cacerts
          optional: true
      - name: istio-kubeconfig
        secret:
          secretName: istio-kubeconfig
          optional: true

---
# Source: higress-core/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: higress-gateway
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-2.2.4
    app: higress-gateway
    higress: higress-system-higress-gateway
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-gateway
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: higress-gateway
      higress: higress-system-higress-gateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
  template:
    metadata:
      annotations:
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        sidecar.istio.io/inject: "false"
        app: higress-gateway
        higress: higress-system-higress-gateway
    spec:
      serviceAccountName: higress-gateway
      securityContext:
        # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
        - name: higress-gateway
          image: "higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/gateway:v2.2.3"
          args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
            - --serviceCluster=higress-gateway
          securityContext:
            # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            privileged: false
            # When enabling lite metrics, the configuration template files need to be replaced.
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
          ports:
          - containerPort: 15020
            protocol: TCP
            name: istio-prom
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          - containerPort: 80
            hostPort:  80
            name: http
            protocol: TCP
          - containerPort:  443
            hostPort:  443
            name: https
            protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
          - mountPath: /var/run/secrets/workload-spiffe-uds
            name: workload-socket
          - mountPath: /var/run/secrets/credential-uds
            name: credential-socket
          - mountPath: /var/run/secrets/workload-spiffe-credentials
            name: workload-certs
          - name: istio-token
            mountPath: /var/run/secrets/tokens
            readOnly: true
          - name: config
            mountPath: /etc/istio/config
          - name: higress-ca-root-cert
            mountPath: /var/run/secrets/istio
          - name: istio-data
            mountPath: /var/lib/istio/data
          - name: podinfo
            mountPath: /etc/istio/pod
          - name: proxy-socket
            mountPath: /etc/istio/proxy
          - mountPath: /opt/plugins
            name: local-wasmplugins-volume
      volumes:
      - emptyDir: {}
        name: workload-socket
      - emptyDir: {}
        name: credential-socket
      - emptyDir: {}
        name: workload-certs
      - name: istio-token
        projected:
          sources:
            - serviceAccountToken:
                audience: istio-ca
                expirationSeconds: 43200
                path: istio-token
      - name: higress-ca-root-cert
        configMap:
          name: higress-ca-root-cert
      - name: config
        configMap:
          name: higress-config
      - name: istio-data
        emptyDir: {}
      - name: proxy-socket
        emptyDir: {}
      - name: podinfo
        downwardAPI:
          defaultMode: 420
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.annotations
            path: annotations
          - path: cpu-request
            resourceFieldRef:
              containerName: higress-gateway
              divisor: 1m
              resource: requests.cpu
          - path: cpu-limit
            resourceFieldRef:
              containerName: higress-gateway
              divisor: 1m
              resource: limits.cpu
      - name: local-wasmplugins-volume
        hostPath:
          path: /opt/plugins
          type: Directory

---
# Source: higress-core/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: higress
spec:
  controller: higress.io/higress-controller

---
# Source: higress-core/templates/fallback-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: higress-gateway-global-custom-response
  namespace: higress-system
  labels:
    helm.sh/chart: higress-core-2.2.4
    app: higress-gateway
    higress: higress-system-higress-gateway
    app.kubernetes.io/version: "2.2.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-gateway
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.filters.http.custom_response
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.custom_response.v3.CustomResponse
  workloadSelector:
    labels:
      app: higress-gateway
      higress: higress-system-higress-gateway
